--- a/WebContent/adminEgressInitQuarantine.zul
+++ b/WebContent/adminEgressInitQuarantine.zul
@@ -184,7 +184,8 @@
                                                         <row>
                                                             <label value="${c:l('sp.common.departure.date')}" sclass="lblbold"/>
                                                              <hlayout>
-                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy"/>
+                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy" constraint="no empty: ${c:l('error.field.required')}"/>
+                                                             <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
                                                       <row id="rowCustomer" >
@@ -216,7 +217,7 @@
                                                         <row>
                                                             <label value="${c:l('sp.common.status')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                                <combobox id="cmbStatus" width="190px" />
+                                                                <combobox id="cmbStatus" width="190px" constraint="no empty: ${c:l('error.field.required')}"/>
                                                                 <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
