--- a/WebContent/adminEgressInitTransit.zul
+++ b/WebContent/adminEgressInitTransit.zul
@@ -184,7 +184,8 @@
                                                         <row>
                                                             <label value="${c:l('sp.common.departure.date')}" sclass="lblbold"/>
                                                              <hlayout>
-                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy"/>
+                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy" constraint="no empty: ${c:l('error.field.required')}"/>
+                                                               <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
                                                       <row id="rowCustomer" >
