--- a/WebContent/adminEgressInitWait.zul
+++ b/WebContent/adminEgressInitWait.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminEgressUnitTransitController" class="general-window" >
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminEgressUnitWaitController" class="general-window" >
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -184,7 +184,8 @@
                                                         <row>
                                                             <label value="${c:l('sp.common.departure.date')}" sclass="lblbold"/>
                                                              <hlayout>
-                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy"/>
+                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy" constraint="no empty: ${c:l('error.field.required')}"/>
+                                                               <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
                                                       <row id="rowCustomer" >
