--- a/WebContent/listProducts.zul
+++ b/WebContent/listProducts.zul
@@ -55,14 +55,15 @@
                                             <!--Record Listbox-->
                                             <listbox id="lbxRecords" fixedLayout="true" width="1395px" height="530px">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="240px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="180px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.descripton')}" width="390px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.amount')}" width="205px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stockMin')}" width="205px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stockMax')}" width="205px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.ubicationBox')}" width="180px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="185px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stockMin')}" width="180px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stockMax')}" width="180px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.status')}" width="50px" sort="auto"/>
                                                     <listheader label="-" width="50px"/>
-                                                    <listheader label="-" width="50px"/>
+<!--                                                     <listheader label="-" width="50px"/> -->
                                                     
                                                 </listhead>
                                             </listbox>
