--- a/WebContent/adminProduct.zul
+++ b/WebContent/adminProduct.zul
@@ -121,7 +121,13 @@
                                                                 <label value="${c:l('sp.common.max45')}" sclass="lblexample"/>
                                                             </hlayout>
                                                         </row>
-                           
+                        							    <row>
+                                                            <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                                <combobox id="cmbCategory" width="190px" mold="rounded" readonly="true"/>
+                                                                <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
                                                     </rows>
                                                 </grid>
                                                                           
