--- a/WebContent/listProducts.zul
+++ b/WebContent/listProducts.zul
@@ -53,14 +53,15 @@
                                             </vlayout>
                                             <separator/>
                                             <!--Record Listbox-->
-                                            <listbox id="lbxRecords" fixedLayout="true" width="1395px" height="530px">
+                                             <listbox id="lbxRecords" fixedLayout="true" width="1395px" height="550px" mold="paging">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="180px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.descripton')}" width="390px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.ubicationBox')}" width="180px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="185px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stockMin')}" width="180px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stockMax')}" width="180px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="200px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.descripton')}" width="330px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.ubicationBox')}" width="160px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="165px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stockMin')}" width="160px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stockMax')}" width="160px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.category')}" width="120px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.status')}" width="50px" sort="auto"/>
                                                     <listheader label="-" width="50px"/>
 <!--                                                     <listheader label="-" width="50px"/> -->
