--- a/WebContent/listStock.zul
+++ b/WebContent/listStock.zul
@@ -53,14 +53,14 @@
                                             </vlayout>
                                             <separator/>
                                             <!--Record Listbox-->
-                                            <listbox id="lbxRecords" fixedLayout="true" width="1395px" height="530px" mold="paging">
+                                            <listbox id="lbxRecords" fixedLayout="true" width="1395px" height="550px" mold="paging">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="275px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.descripton')}" width="275px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="255px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.descripton')}" width="295px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.ubicationBox')}" width="170px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.ubicationFolder')}" width="175px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.amount')}" width="175px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stock')}" width="175px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.quantity')}" width="175px" sort="auto"/>
                                                     <listheader label="-" width="50px"/>
                                                     <listheader label="-" width="50px"/>
                                                     <listheader label="-" width="50px"/>
