--- a/WebContent/detailedReportStock.zul
+++ b/WebContent/detailedReportStock.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListProductSerieController" class="general-window">
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.DetailedListProductSerieController" class="general-window">
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -88,18 +88,18 @@
                                             <div align="center">
                                              <listbox id="lbxReport" fixedLayout="true" width="1395px" height="550px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="110px"/>
+                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="140px"/>
                                                         <listheader label="${c:l('sp.common.name')}" width="200px"/>
                                                         <listheader label="${c:l('sp.common.provider')}" width="100px"/>
-                                                        <listheader label="${c:l('sp.common.category')}" width="105px"/>
+                                                        <listheader label="${c:l('sp.common.transaction.type')}" width="145px"/>
                                                         <listheader label="${c:l('sp.common.condition')}" width="90px"/>
                                                          <listheader label="${c:l('sp.common.serial')}" width="125px"/>
-<!--                                                         <listheader label="${c:l('sp.common.customer')}" width="85px"/> -->
-                                                         <listheader label="${c:l('sp.common.work.order')}" width="125px"/>
+<!--                                                         <listheader label="${c:l('sp.common.customer')}" width="105px"/> -->
+                                                         <listheader label="${c:l('sp.common.work.order')}" width="135px"/>
                                                         <listheader label="${c:l('sp.transaction.amount')}" width="90px"/>
-                                                        <listheader label="${c:l('sp.common.quantity')}" width="170px"/>
-                                                        <listheader label="${c:l('sp.common.creationDate')}" width="140px"/>
-                                                        <listheader label="${c:l('sp.common.date.expiration')}" width="140px"/>
+                                                        <listheader label="${c:l('sp.common.quantity')}" width="80px"/>
+                                                        <listheader label="${c:l('sp.common.creationDate')}" width="135px"/>
+                                                        <listheader label="${c:l('sp.common.date.expiration')}" width="135px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
