--- a/WebContent/reportQuarantine.zul
+++ b/WebContent/reportQuarantine.zul
@@ -88,18 +88,20 @@
                                             <div align="center">
                                                  <listbox id="lbxReport" fixedLayout="true" width="1395px" height="550px" mold="paging">
                                                     <listhead>
-                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="100px"/>
+                                                        <listheader label="${c:l('sp.common.PartNumber')}" width="110px"/>
                                                         <listheader label="${c:l('sp.common.name')}" width="200px"/>
                                                         <listheader label="${c:l('sp.common.provider')}" width="90px"/>
-                                                        <listheader label="${c:l('sp.common.category')}" width="125px"/>
-                                                        <listheader label="${c:l('sp.common.condition')}" width="90px"/>
+                                                         <listheader label="${c:l('sp.common.userType')}" width="80px"/>
+                                                        <listheader label="${c:l('sp.common.condition')}" width="80px"/>
                                                          <listheader label="${c:l('sp.common.serial')}" width="115px"/>
-                                                        <listheader label="${c:l('sp.common.customer')}" width="85px"/>
-                                                         <listheader label="${c:l('sp.common.work.order')}" width="115px"/>
-                                                        <listheader label="${c:l('sp.transaction.amount')}" width="85px"/>
-                                                        <listheader label="${c:l('sp.common.quantity')}" width="110px"/>
-                                                        <listheader label="${c:l('sp.common.creationDate')}" width="140px"/>
-                                                        <listheader label="${c:l('sp.common.date.expiration')}" width="140px"/>
+                                                        <listheader label="${c:l('sp.common.customer')}" width="107px"/>
+                                                         <listheader label="${c:l('sp.common.work.order')}" width="125px"/>
+                                                        <listheader label="${c:l('sp.transaction.amount')}" width="70px"/>
+                                                        <listheader label="${c:l('sp.common.quantity')}" width="70px"/>
+                                                        <listheader label="${c:l('sp.common.entry')}" width="87px"/>
+                                                        <listheader label="${c:l('sp.common.label.expirationDate')}" width="87px"/>
+                                                        <listheader label="${c:l('sp.munitoring.expirate.curado')}" width="87px"/>
+                                                        <listheader label="${c:l('sp.common.exit')}" width="87px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
