--- a/WebContent/listEgressQuarantine.zul
+++ b/WebContent/listEgressQuarantine.zul
@@ -34,7 +34,7 @@
                                             <!--Filters for Searching-->
                                             <vlayout>
                                                 <hlayout style="text-align:right">
-                                                    <label value="${c:l('sp.common.alias')}" width="80px" sclass="lblbold"/>
+                                                    <label value="${c:l('sp.common.PartNumber')}" width="80px" sclass="lblbold"/>
                                                     <textbox id="txtAlias" value="" width="150px" tooltiptext="${c:l('sp.common.searching.filter')}"/>
                                                 </hlayout>
 
