--- a/WebContent/reportQuarantine.zul
+++ b/WebContent/reportQuarantine.zul
@@ -77,6 +77,10 @@
                                                     <combobox id="cmbTransactionType" width="160px" mold="rounded" readonly="true"/>
                                                 </hlayout>
                                                 <hlayout>
+                                                    <label value="${c:l('sp.common.beginningDate.Exit')}"  sclass="lblbold"/>
+                                                    <datebox id="dtbBeginningDateExit"  format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                    <label value="${c:l('sp.common.endingDate.Exit')}" sclass="lblbold"/>
+                                                    <datebox id="dtbEndingDateExit" format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
                                                     <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
                                                     <button id="btnClear" label="${c:l('sp.common.actions.cancel')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.cancel.filter.tooltip')}"/>
                                                 </hlayout>
@@ -90,18 +94,19 @@
                                                     <listhead>
                                                         <listheader label="${c:l('sp.common.PartNumber')}" width="110px"/>
                                                         <listheader label="${c:l('sp.common.name')}" width="200px"/>
-                                                        <listheader label="${c:l('sp.common.provider')}" width="90px"/>
-                                                         <listheader label="${c:l('sp.common.userType')}" width="80px"/>
+                                                        <listheader label="${c:l('sp.common.provider')}" width="125px"/>
+                                                        <listheader label="${c:l('sp.common.userType')}" width="80px"/>
                                                         <listheader label="${c:l('sp.common.condition')}" width="80px"/>
-                                                         <listheader label="${c:l('sp.common.serial')}" width="115px"/>
-                                                        <listheader label="${c:l('sp.common.customer')}" width="107px"/>
-                                                         <listheader label="${c:l('sp.common.work.order')}" width="125px"/>
-                                                        <listheader label="${c:l('sp.transaction.amount')}" width="70px"/>
+                                                        <listheader label="${c:l('sp.common.serial')}" width="115px"/>
+                                                        <listheader label="${c:l('sp.common.customer')}" width="142px"/>
+                                                        <listheader label="${c:l('sp.common.work.order')}" width="125px"/>
+<!--                                                         <listheader label="${c:l('sp.transaction.amount')}" width="70px"/> -->
                                                         <listheader label="${c:l('sp.common.quantity')}" width="70px"/>
                                                         <listheader label="${c:l('sp.common.entry')}" width="87px"/>
                                                         <listheader label="${c:l('sp.common.label.expirationDate')}" width="87px"/>
-                                                        <listheader label="${c:l('sp.munitoring.expirate.curado')}" width="87px"/>
+<!--                                                         <listheader label="${c:l('sp.munitoring.expirate.curado')}" width="87px"/> -->
                                                         <listheader label="${c:l('sp.common.exit')}" width="87px"/>
+                                                        <listheader label="${c:l('sp.common.status')}" width="87px"/>
                                                     </listhead>
                                                 </listbox>
                                             </div>
