--- a/WebContent/reportMetrologicalControl.zul
+++ b/WebContent/reportMetrologicalControl.zul
@@ -63,10 +63,6 @@
                                                     <combobox id="cmbBraund" width="160px" mold="rounded" readonly="true"/>
                                                     <label value="${c:l('sp.common.control.model')}" sclass="lblbold"/>
                                                     <combobox id="cmbModel" width="160px" mold="rounded" readonly="true"/>
-                                                    <label value="${c:l('sp.common.beginningDate')}"  sclass="lblbold"/>
-                                                    <datebox id="dtbBeginningDate"  format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
-                                                    <label value="${c:l('sp.common.endingDate')}" sclass="lblbold"/>
-                                                    <datebox id="dtbEndingDate" format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
                                                 </hlayout> 
                                                  <hlayout>                                     
                                                     <label value="${c:l('sp.common.control.designation')}" sclass="lblbold"/>
@@ -79,6 +75,14 @@
                                                     <textbox id="txtSerial"  maxlength="45" width="320px"/>
                                                 </hlayout>
                                                 <hlayout>
+                                                    <label value="${c:l('sp.common.beginningDate.calibration')}"  sclass="lblbold"/>
+                                                    <datebox id="dtbBeginningDate"  format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                    <label value="${c:l('sp.common.endingDate.calibration')}" sclass="lblbold"/>
+                                                    <datebox id="dtbEndingDate" format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                    <label value="${c:l('sp.common.beginningDate.control')}"  sclass="lblbold"/>
+                                                    <datebox id="dtbBeginningDateExit"  format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                    <label value="${c:l('sp.common.endingDate.control')}" sclass="lblbold"/>
+                                                    <datebox id="dtbEndingDateExit" format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
                                                     <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
                                                     <button id="btnClear" label="${c:l('sp.common.actions.cancel')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.cancel.filter.tooltip')}"/>
                                                 </hlayout>
