--- a/WebContent/reportTransit.zul
+++ b/WebContent/reportTransit.zul
@@ -77,6 +77,10 @@
                                                     <combobox id="cmbTransactionType" width="160px" mold="rounded" readonly="true"/>
                                                 </hlayout>
                                                 <hlayout>
+                                                    <label value="${c:l('sp.common.beginningDate.Exit')}"  sclass="lblbold"/>
+                                                    <datebox id="dtbBeginningDateExit"  format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                    <label value="${c:l('sp.common.endingDate.Exit')}" sclass="lblbold"/>
+                                                    <datebox id="dtbEndingDateExit" format="dd-MM-yyyy" tooltiptext="${c:l('sp.common.searching.filter')}"/>
                                                     <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
                                                     <button id="btnClear" label="${c:l('sp.common.actions.cancel')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.cancel.filter.tooltip')}"/>
                                                 </hlayout>
